--- a/style.css
+++ b/style.css
@@ -1,137 +1,255 @@
- /* * {
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
+
+:root {
+    --blue: #00A3DE;
+    --gray: #6D778B;
+    --white-clr: #F7F9FB;
+    --main-font: 'DM Sans', sans-serif;
+    --weight-500: 500;
+    --weight-600: 600;
+    --weight-700: 700;
+    --font-size: 20px;
+    --font-size-big: 25px;
+}
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-main {
-    width: 100%;
-    height: 700px;
-    color: #FFFFFF;
+body {
+    font-family: var(--main-font);
+}
+
+.main-bg {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.main-wrapper {
     display: grid;
     place-items: center;
-    font-family: 'Helvetica';
+    background-image: url(images/891613_O928X90\ 1.png);
+    width: 100vw;
+    height: 100vh;
 }
 
-.section-box {
-    width: clamp(320px, 75vw, 700px);
-    height: 78%;
+.first-wrapper {
+    border-radius: 60px;
+    background-color: var(--white-clr);
+    width: clamp(350px, 50%, 683px);
+    display: grid;
+    place-items: center;
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+}
+
+.energy-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 3rem;
+}
+
+.logo-div {
+    width: 88.88px
+}
+
+.logo-div img{
+   display: block;
+}
+
+.h3-head {
+    width: 183px;
+    font-size: var(--font-size-big);
+    color: var(--blue);
+    font-weight: var(--weight-500);
+    line-height: 26.66px;
+}
+
+.para {
+    font-size: var(--font-size);
+    color: var(--gray);
+    text-align: center;
+    margin-bottom: 1.8rem;
+}
+
+.btn {
+    display: block;
+    width: 100%;
+    font-family: var(--main-font);
+    color: var(--blue);
+    font-size: 14px;
+    line-height: 18.23px;
+    background-color: transparent;
+    border: var(--blue) 2px solid;
+    padding: 10px 20px 10px 20px;
+    border-radius: 40px;
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: var(--blue);
+    color: var(--white-clr);
+    transition: 400ms ease-in-out;
+}
+
+/* gas cost page begins */
+.cost-wrapper {
+    padding-block: 3rem;
+    background-image: url(images/891613_O928X90\ 1\ \(1\).png);
+}
+
+.cost-wrap {
+    margin-inline: auto;
+    width: clamp(280px, 60%, 683px);
+    background-color: var(--white-clr);
+    display: grid;
+    place-items: center;
+    border-radius: 40px;
+}
+
+.cost-inside {
+    padding-block: 2.5rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    border: 1px solid #007AFF;
-    border-radius: 60px;
-}
-
-.offer {
-    background-color: #FFDD01;
-    color: black;
-    margin-inline: auto;
-    padding: 5px;
-    width: 134px;
-    border-radius: 22px;
-    transform: translateY(-15px);
-}
-
-.pic {
-    width: 100%;
-    height: 70%;
-}
-
-.product-img {
-    border-radius: 60px;
-    height: 100%;
-    width: 100%;
-    display: block;
-}
-
-.tiny-flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    
-}
-
-.nok {
-    font-size: 25px;
-    line-height: 30px;
-    color: #000000;
-    font-weight: 700;
-    position: relative;
-    align-self: center;
-    
-}
-
-.nok::after {
-    content: url(images/Vector\ 1.svg);
+    gap: 3rem;
     width: 70%;
-    position: absolute;
-    bottom: -13px;
-    right: 10px;
 }
 
-.save-btn {
-    background-color: #FFDD01;
-    color: black;
-    padding: 5px 15px;
-    border-radius: 22px;
-    border: none;
-    font-size: 16px;
-    font-weight: 400px;
+.cost-energy-wrap {
+    justify-content: center;
+    background-color: var(--white-clr);
+    margin-bottom: unset;
 }
 
-.blue-box {
-    background-color: #007AFF;
-    height: 60px;
-    border-radius: 0 0 60px 60px;
-}
-
-.pack {
-    width: 345px;
+.cost-para {
+    width: 280px;
     margin-inline: auto;
-    font-size: 20px;
-    margin-top: 20px;
-    position: relative;
-    border-bottom: 1px solid white;
 }
 
-
-
-@media screen and (max-width: 500px) {
-    .section-box {
-        height: 380px;
-        gap: 10px;
-    }
-
-    .pic {
-        height: 230px;
-    }
-
-    .pack {
-        font-size: 12px;
-        width: 210px;
-    }
-
-    .tiny-flex {
-        font-size: 16px;
-    }
-
-    .nok {
-        font-size: 14px;
-    }
-
-    .save-btn {
-        padding: 5px 15px;
-       border-radius: 22px;
-       font-size: 14px;
-    }
-
-    .nok::after {
-    position: absolute;
-    left: 0;
-    transform: scaleX(.5);
+.costy {
+    min-height: 42px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 40px;
+    padding: 5px 5px 5px 20px;
 }
 
-}  */
+.costy p {
+    color: var(--gray);
+    font-size: 14px;
+}
+
+.cost-year {
+    border: 1px solid #F2F3F4;
+    color: var(--gray);
+    height: 42px;
+    border-radius: 40px;
+    text-align: center;
+    color: var(--gray);
+    font-size: 16px;
+}
+
+.cost-year:focus {
+    outline: 2px solid var(--blue);
+}
+
+.costy-btn-flex {
+    margin-inline: auto;
+    width: 80%;
+    display: flex;
+    gap: 5px;
+}
+
+.calc-wrap {
+    width: 80%;
+    margin-inline: auto;
+}
+
+/* result style */
+.main-result {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    width: 100%;
+    background-image: url(images/891613_O928X90\ 1\ \(1\).png);
+}
+
+.result-section {
+    margin-inline: auto;
+    border-radius: 60px;
+    background-color: var(--white-clr);
+    width: clamp(350px, 50%, 683px);
+    display: grid;
+    place-items: center;
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+}
+
+.result-inside {
+    width: 70%;
+}
+
+.result-tot {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.tot-wrap {
+    background-image: url(images/Vector\ 4.png), url(images/Vector\ 5.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+    width: 273px;
+    height: 271px;
+    border: 5px solid #00A3DE33;
+    border-radius: 40px;
+    display: grid;
+    place-items: center;
+}
+
+.total-result {
+    font-size: 60px;
+    font-weight: var(--font-size-big);
+    color: var(--blue);
+}
+
+.result-wrap {
+    justify-content: center;
+    margin-bottom: 4rem;
+}
+
+.return {
+    text-decoration: none;
+    text-align: center;
+}
+
+.pot {
+    width: 310.8px;
+    font-size: 32px;
+    line-height: 30.46px;
+    margin-bottom: 1rem;
+    color: #264860;
+}
+
+@media screen and (max-width: 800px){
+    .cost-wrap {
+        width: 90%;
+    }
+
+    .cost-inside {
+        width: 95%;
+    }
+
+    .costy {
+        padding-left: 10px;
+    }
+}
