--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
 
 :root {
     --blue: #00A3DE;
@@ -98,7 +98,7 @@ body {
 }
 
 /* gas cost page begins */
-.cost-wrapper {
+/* .cost-wrapper {
     padding-block: 3rem;
     background-image: url(images/891613_O928X90\ 1\ \(1\).png);
 }
@@ -170,10 +170,10 @@ body {
 .calc-wrap {
     width: 80%;
     margin-inline: auto;
-}
+} */
 
 /* result style */
-.main-result {
+/* .main-result {
     padding-top: 5rem;
     padding-bottom: 5rem;
     width: 100%;
@@ -252,4 +252,4 @@ body {
     .costy {
         padding-left: 10px;
     }
-}
+} */
